# wakemebot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build-single-binary-application.sh  pyoxidizer.bzl  pyproject.toml  repo-state-example.json  setup.cfg
.github/workflows/: cicd.yml
aptly/: Dockerfile  client.env  docker-compose.yml
aptly/nginx/: dh.pem  server.crt
functional-tests/: Dockerfile  docker-compose.yml  test.sh
functional-tests/nginx/: ca.crt  default.conf  server.key
src/wakemebot/: __main__.py  apt.py  aptly.py  badges.py  bot.py  cli.py  docs.py  generator.py  git.py  plugin.py  sync.py  templates.py
src/wakemebot/templates/: component.md
tests/: conftest.py  test_aptly.py  test_bot.py  test_docs.py  test_generator.py  test_git.py  test_sync.py  test_wakemebot.py
