[tool.poetry]
name = "wakemebot"
version = "0.1.0"
description = "Bunch of tools used in wakemeops CI pipelines"
repository = "https://github.com/upciti/wakemebot"
license = "MIT"
keywords=["Debian", "DevOps", "Automation", "APT"]
authors = ["Upciti <support@upciti.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
readme = "README.md"
packages = [
    {include = "wakemebot", from  = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.15.4,<0.18.0"
typer = "^0.4.0"
pydantic = "^1.8.2"
ops2deb = "0.7.0"
python-debian = "^0.1.40"

[tool.poetry.scripts]
wakemebot = "wakemebot.cli:main"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
taskipy = "*"
pytest-cov = "*"
flake8 = "*"
black = ">=20.8b1"
isort = "^5.8.0"

[tool.taskipy.tasks]
check = """
isort src tests\
 && black .\
 && flake8 src\
 && mypy src\
 && pytest --cov src tests\
"""

[tool.black]
line-length = 90
target_version = ['py39']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 90
profile = "black"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
