[tool.poetry]
name = "wakemebot"
version = "0"
description = "Bunch of tools used in wakemeops CI pipelines"
repository = "https://github.com/upciti/wakemebot"
license = "MIT"
keywords=["Debian", "DevOps", "Automation", "APT"]
authors = ["Upciti <support@upciti.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
readme = "README.md"
packages = [
    {include = "wakemebot", from  = "src"},
    {include = "wakemebot", from  = "src"},
]

[tool.poetry.plugins."mkdocs.plugins"]
wakemedoc = "wakemebot.plugin:WakeMeDocPlugin"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
httpx = "*"
typer = "*"
pydantic = "^1"
python-debian = "*"
Jinja2 = "^3"
mkdocs = "^1"
mkdocs-material = "^8"
semver = "3.0.0-dev.3"
pyinstaller = { version = "*", optional = true }
ops2deb = "*"

[tool.poetry.scripts]
wakemebot = "wakemebot.cli:main"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
taskipy = "*"
pytest-cov = "*"
flake8 = "*"
black = ">=20.8b1"
isort = "*"
poetry-dynamic-versioning = "*"

[tool.poetry.extras]
pyinstaller = ["pyinstaller"]

[tool.taskipy.tasks]
check = """
isort src tests\
 && black src tests\
 && flake8 src tests\
 && mypy src\
 && pytest --cov src tests\
"""
single_binary_application = """
pyinstaller --onefile src/wakemebot/__main__.py --name wakemebot -s
"""

[tool.black]
line-length = 90
target_version = ['py39']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 90
profile = "black"

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "(?x)^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/wakemebot/__init__.py"]
