[tool.poetry]
name = "wakemebot"
version = "0"
description = "Bunch of tools used in wakemeops CI pipelines"
repository = "https://github.com/upciti/wakemebot"
license = "MIT"
keywords=["Debian", "DevOps", "Automation", "APT"]
authors = ["Upciti <support@upciti.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
readme = "README.md"
packages = [
    {include = "wakemebot", from  = "src"},
    {include = "wakemebot", from  = "src"},
]

[tool.poetry.plugins."mkdocs.plugins"]
wakemedoc = "wakemebot.plugin:WakeMeDocPlugin"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = ">=0.20.0"
typer = "^0.7.0"
pydantic = "^1.10.4"
python-debian = "^0.1.49"
Jinja2 = "^3.1.2"
mkdocs = "^1.4.2"
mkdocs-material = "9.0.11"
semver = "3.0.0-dev.2"
pyinstaller = { version = "*", optional = true }

[tool.poetry.scripts]
wakemebot = "wakemebot.cli:main"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
taskipy = "*"
pytest-cov = "*"
black = ">=20.8b1"
poetry-dynamic-versioning = "^0.13.1"
ruff = "^0.0.254"
pytest-httpx = "^0.21.3"

[tool.poetry.extras]
pyinstaller = ["pyinstaller"]

[tool.taskipy.tasks]
check = """
black src tests\
 && ruff src tests --fix\
 && mypy src\
 && pytest --cov src tests\
"""
single_binary_application = """
pyinstaller --onefile src/wakemebot/__main__.py --name wakemebot -s
"""

[tool.black]
line-length = 90
target_version = ['py310']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 90
profile = "black"

[tool.mypy]
files = "src"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_calls = false

[tool.ruff]
line-length = 90
select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["src", "tests"]

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "(?x)^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/wakemebot/__init__.py"]
